# compiler-lab-llm2fpga

./: .gitignore  .gitmodules  README.md  flake.nix  torch-mlir.nix
.agents/: AGENTS.md
TinyStories/: model_adapter.py  model_adapter_pt2e_static_quant.py  model_adapter_pt2e_w8a8_study.py  model_adapter_quantized_representative_core_pt2e_w8a8.py  model_adapter_representative_core_pt2e_static_quant.py  model_adapter_representative_core_w4a8_integer.py  pt2e_w8a8_study.py  quantized_rc_study_input.json  quantized_rc_study_input.py  rc_working_contract.py  rc_working_corpus.json
docs/: current-baseline.md  glossary.md  llm2fpga-mlir-bringup.org  pipeline-contract.md  project-plan.org  read-the-repo.md
nix/: calyx.nix  circt-passes.nix  hardfloat.nix  mlir-passes.nix  models.nix  nanobind-bootstrap.nix  pipeline.nix  rc-working-system.nix
scripts/: compile-pytorch.py  direct_lower.py  materialize-pytorch-exported.py  materialize-pytorch-stage.py
sim/: sim_utils.py
src/: matmul.py
task3-main/: .gitignore  .gitmodules  PORT.md  README.md  README.org  flake.nix  representative-core-parity-shapes.json  torch-mlir.nix
tests/: test_calyx_export_normalization.py  test_calyx_float_frontier_report.py  test_calyx_float_nix_package.py  test_calyx_math_legalization.py  test_calyx_memref_result_wrapper.py  test_calyx_preflight_report.py  test_direct_linalg_xc7k480t_utilization.py  test_embedding_pattern.py  (+28 more)
tools/circt-passes/: CMakeLists.txt  CalyxPipelinePasses.cpp
tools/mlir-passes/: CMakeLists.txt  FoldConstantTruncFOps.cpp  LegalizePt2eTosaZeroPoint.cpp
(+309 files in other folders)
